# kythi-imagehost-api

./: .gitignore  Cargo.toml  Config.example.toml
api/: Cargo.toml
api/src/: lib.rs
api/src/infrastructure/repository/: mod.rs  user.rs
api/src/routes/: mod.rs
api/src/routes/auth/: login.rs  signup.rs
configurator/: Cargo.toml
configurator/src/: lib.rs
database/: Cargo.toml
database/src/: pool.rs
entity/: Cargo.toml
entity/src/entities/: access_token.rs  credential.rs  file.rs  mod.rs  prelude.rs  sea_orm_active_enums.rs  user.rs
migration/: Cargo.toml
migration/src/: lib.rs  main.rs
migration/src/migrations/: m20250120_192657_user.rs  m20250120_193033_access_token.rs  m20250120_193056_credential.rs  m20250120_193117_file.rs  mod.rs
src/: main.rs
