[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
config = { workspace = true }

configurator = { path = "../configurator" }

[dependencies.sea-orm-migration]
version = "1.1.4"
features = ["runtime-tokio-rustls", "sqlx-postgres"]
